+; moved link-icon color writeup to <https://gwern.net/web-color>

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18082,7 +18082,7 @@
 "~^/doc/darknet-market/2015-03-30-gwern-redditsubpoena$" "/doc/darknet-market/2015-03-30-gwern-redditsubpoena.html";
 "~^/doc/cs/hardware/2021-koo$" "/doc/cs/hardware/2021-koomey.pdf";
 "~^/doc/bitcoin/gwern.*$" "/doc/bitcoin/index";
-"~^/doc/ai/nn/sparsity/quantization/index$" "/doc/ai/nn/sparsity/low-precisin/index";
+"~^/doc/ai/nn/sparsity/quantization/index$" "/doc/ai/nn/sparsity/low-precision/index";
 "~^/doc/ai/nn/diffusion/midjourney/index;.*$" "/doc/ai/nn/diffusion/midjourney/index";
 "~^/.config.yaml$" "https://github.com/gwern/gwern.net/";
 "~^/Comple\\.*$" "/complexity";
@@ -18800,6 +18800,84 @@
 "~^/doc/psychology/loftus/1974-loftus\.pdf.*$" "/doc/psychology/cognitive-bias/1974-loftus.pdf";
 "~^/doc/g3.php$" "/doc/index";
 "~^/fee$" "/index#footer-anonymous-feedback";
+"~^/fiction/The-Ones-Who-Walk-Towards-Acre.*$" "/fiction/acre";
+"~^/effect/js/transform.js$" "https://invertornot.com";
+"~^/tolerability/policyidx.html$" "https://web.archive.org/web/20020209100404/policyidx.html";
+"~^/tolerability/education.html$" "https://web.archive.org/web/20020209100404/education.html";
+"~^/tolerability/contact.html$" "https://web.archive.org/web/20020209100404/contact.html";
+"~^/tolerability/aboutidx.html$" "https://web.archive.org/web/20020209100404/aboutidx.html";
+"~^/modafinil%C2%A0.*$" "/modafinil";
+"~^/dynamic-evaluation$" "/doc/ai/nn/dynamic-evaluation/index";
+"~^/[Tt]ransclude\.$" "/static/404";
+"~^/Tablesorter\..*$" "/static/404";
+"~^/Superrationa$" "/Superrationality";
+"~^/Research:Vandal_fighter_work_load$" "https://meta.wikimedia.org/wiki/Research:Vandal_fighter_work_load";
+"~^/Popups\..*$" "/static/404";
+"~^/modafinil\&nbsp.*$" "/modafinil";
+"~^/modafinil%C2%.*$" "/modafinil";
+"~^/doc/rotten.com/library/sports/$" "/doc/rotten.com/library/bio/sports/index.html";
+"~^/doc/rotten.com/library/bio/crime/terrorists/terry-nichols/index$" "/doc/rotten.com/library/bio/crime/terrorists/terry-nichols/index.html";
+"~^/doc/reinforcement-learning/dynamic-evaluation$" "/doc/ai/nn/dynamic-evaluation/index";
+"~^/doc/psychology/okcupid/d2V.*$" "/doc/psychology/okcupid/index";
+"~^/doc/personal/RV.*$" "/doc/personal/index";
+"~^/doc/personal/2011-gwern-yourmorals.org/justice_process.php_files/index$" "/doc/personal/2011-gwern-yourmorals.org/justice_process.html";
+"~^/doc/iq/high/smpy/2005-tour%C3%B3n\.pdf.*$" "/doc/iq/high/smpy/2005-touron.pdf";
+"~^/doc/genetics/%C2%BF.*$" "/doc/genetics/index";
+"~^/doc/dynamic-evaluation$" "/doc/ai/nn/dynamic-evaluation/index";
+"~^/doc/anime/eva/little-boy/2004-1$" "/doc/anime/eva/little-boy/2004-okada";
+"~^/doc/ai/nn/sparsity/low-precisin/index$" "/doc/ai/nn/sparsity/low-precision/index";
+"~^/doc/ai/1948-turing\.pdf.*$" "/doc/ai/1951-turing.pdf";
+"~^/DarkMode\..*$" "/static/404";
+"~^/Content\..*$" "/static/404";
+"~^/__down.*$" "/static/404";
+"~^/bootstrap.yml$" "/404.html";
+"~^/tolerability/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/tolerability/abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/tolerability/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/tolerability/conseq/faqcons1.html$" "/doc/biology/2000-iapac-norvir/conseq/faqcons1.html";
+"~^/tolerability/tolerability/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/tolerability/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/tolerability/regimens/fortalg.html$" "/doc/biology/2000-iapac-norvir/regimens/fortalg.html";
+"~^/tolerability/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/tolerability/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/tolerability/softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/doc/Carnip/1979-bland\.pdf.*$" "/doc/cat/psychology/drug/catnip/1979-bland.pdf";
+"~^/doc/1996-slater\.pdf.*$" "/doc/culture/1996-slater.pdf";
+"~^/doc/1985-hofstadte$" "/doc/existential-risk/1985-hofstadter";
+"~^/doc/genetics/selection/www$" "/doc/genetics/selection/index";
+"~^/doc/iq/high/smpy/2019-m$" "/doc/iq/high/smpy/2019-mccabe.pdf";
+"~^/doc/1989-hughes\.pdf.*$" "/doc/nicotine/1989-hughes.pdf";
+"~^/doc/2011-gwern-yourmorals.org/selfeval_process.php_files/surveyresults_graph_extremes_registration.png$" "/doc/personal/2011-gwern-yourmorals.org/selfeval_process.php_files/surveyresults_graph_extremes_registration.png";
+"~^/doc/genetics/heritable/2021-duarte-figure1-comtphewasnullresults.jpg$" "/doc/psychiatry/schizophrenia/2021-duarte-figure1-comtphewasnullresults.jpg";
+"~^/doc/psychology/1955-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/psychology/2015-07$" "/doc/psychology/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
+"~^/doc/statis-tics/decision/1957-bellman-dynamicprogramming\.pdf.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/doc/ai/nn/diffusion/www/sander.ai/e206a82a3a46f2351209c00f2212172f4bcd84f2.html$" "/doc/www/sander.ai/e206a82a3a46f2351209c00f2212172f4bcd84f2.html";
+"~^/abcdes$" "/static/404";
+"~^/girl-scouts-and-good-governance.md$" "/girl-scouts";
+"~^/GPT-2the.*$" "/gpt-2";
+"~^/W3C$" "https://en.wikipedia.org/wiki/W3C";
+"~^/gsc.q$" "/static/404";
+"~^/amodafinil$" "/modafinil";
+"~^/newsletter/2020/00$" "/newsletter/2020/01";
+"~^/note/Lizardman$" "/note/lizardman";
+"~^/book$" "/review/book";
+"~^/.netrc$" "/static/404";
+"~^/static/font/dropcap/Yinit-L.ttf$" "/static/font/dropcap/yinit/Yinit-L.ttf";
+"~^/doc/politics/2007-thiel/favicon.ico$" "/static/img/favicon.ico";
+"~^/srs$" "/spaced-repetition";
+"~^/doc/biology/about/images/.*$" "/doc/biology/index";
+"~^/doc/biology/about/conseq/.*$" "/doc/biology/index";
+"~^/tool-ai\&l.*$" "/tool-ai";
+"~^/doc/sociology/1974-martinson.pdf%C2%A0.*$" "/doc/sociology/1974-martinson.pdf";
+"~^/doc/iq/high/smpy/1984-clements.pdf\&lt.*$" "/doc/iq/high/smpy/1984-clements.pdf";
+"~^/doc/biology/about/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/psychology/2019-01-%C2%BF.*$" "/doc/psychology/index";
+"~^/doc/rl/2017-silve$" "/doc/reinforcement-learning/2017-silver.pdf";
+"~^/Startup-mis$" "/startup-ideas#miscellaneous";
+"~^/[Cc]olor.*$" "/web-color";
+"~^/[Ww]ebsite-?[Cc]olor.*$" "/web-color";
+"~^/[Ll]ink-?[Cc]olor.*$" "/web-color";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
