--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18802,10 +18802,10 @@
 "~^/fee$" "/index#footer-anonymous-feedback";
 "~^/fiction/The-Ones-Who-Walk-Towards-Acre.*$" "/fiction/acre";
 "~^/effect/js/transform.js$" "https://invertornot.com";
-"~^/tolerability/policyidx.html$" "https://web.archive.org/web/20020209100404/policyidx.html";
-"~^/tolerability/education.html$" "https://web.archive.org/web/20020209100404/education.html";
-"~^/tolerability/contact.html$" "https://web.archive.org/web/20020209100404/contact.html";
-"~^/tolerability/aboutidx.html$" "https://web.archive.org/web/20020209100404/aboutidx.html";
+"~^/tolerability/policyidx.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/policyidx.html";
+"~^/tolerability/education.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/education.html";
+"~^/tolerability/contact.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/contact.html";
+"~^/tolerability/aboutidx.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/aboutidx.html";
 "~^/modafinil%C2%A0.*$" "/modafinil";
 "~^/dynamic-evaluation$" "/doc/ai/nn/dynamic-evaluation/index";
 "~^/[Tt]ransclude\.$" "/static/404";
@@ -18878,6 +18878,51 @@
 "~^/[Cc]olor.*$" "/web-color";
 "~^/[Ww]ebsite-?[Cc]olor.*$" "/web-color";
 "~^/[Ll]ink-?[Cc]olor.*$" "/web-color";
+
+"~^/web-colors$" "/web-color";
+"~^/doc/bitcoin/1956-littleton-studiesinthehistoryofaccounting.pdf\&lt.*$" "/doc/bitcoin/1956-littleton-studiesinthehistoryofaccounting.pdf";
+"~^/doc/biology/2000-iapac-norvir/tolerability/index$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/tolerability/index.html";
+"~^/system.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/system.html";
+"~^/doc/biology/2000-iapac-norvir/ritonavir.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//ritonavir.html";
+"~^/doc/biology/2000-iapac-norvir/policyidx.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//policyidx.html";
+"~^/doc/biology/2000-iapac-norvir/forms/emaillist.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//forms/emaillist.html";
+"~^/doc/biology/2000-iapac-norvir/compnews/abb90630.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//compnews/abb90630.html";
+"~^/doc/biology/2000-iapac-norvir/about/website.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//about/website.html";
+"~^/doc/biology/2000-iapac-norvir/about/staff.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//about/staff.html";
+"~^/doc/biology/2000-iapac-norvir/about/publications.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//about/publications.html";
+"~^/doc/biology/2000-iapac-norvir/about/board.html$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80//about/board.html";
+"~^/.*www.sciencedirect.com/science/journal/01651781$" "https://www.sciencedirect.com/journal/psychiatry-research";
+"~^/.*/dx.doi.org/10.1016/j.drugpo.2013.01.005$" "https://www.sciencedirect.com/science/article/abs/pii/S0955395913000066?via%3Dihub";
+"~^/doc/darknet-market/2011-11-fU.*$" "/doc/darknet-market/2011-11-29-juergen2001.mht";
+"~^/doc/statistics/bias/www.pnas.org/cgi/doi/10.1073/pnas.1618569114$" "https://www.pnas.org/doi/full/10.1073/pnas.1618569114";
+"~^/doc/statistics/bayes/b5.*$" "/doc/statistics/bayes/index";
+"~^/doc/statistics/bayes/1994-falk\?.*$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/medicine/2017-ahmann\.pdf.*$" "/static/404";
+"~^/doc/cs/algorithm/ai/nn/transformer/alphafold/index$" "/doc/ai/nn/transformer/alphafold/index";
+"~^/doc/biology/2000-iapac-norvir/tolerability/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/co2/2015-stafford$" "/doc/co2/2015-stafford.pdf";
+"~^/doc/2009-brunye\.pdf.*$" "/doc/dual-n-back/2009-brunye.pdf";
+"~^/doc/2009-brunye\.pdf.*$" "/doc/dual-n-back/2009-brunye.pdf";
+"~^/doc/1972-pharoah\.pdf.*$" "/doc/iodine/1972-pharoah.pdf";
+"~^/doc/1972-pharoah\.pdf.*$" "/doc/iodine/1972-pharoah.pdf";
+"~^/doc/psychedelic/2022-colbe$" "/doc/psychedelic/2022-colbert.pdf";
+"~^/doc/psychology/1941-cleckle$" "/doc/psychiatry/1941-cleckley.pdf";
+"~^/doc/psychology/person-ality2020-matz\.pdf.*$" "/doc/psychology/personality/2020-matz.pdf";
+"~^/doc/spacedrepitition/1939-spitzer\.pdf.*$" "/doc/psychology/spaced-repetition/1939-spitzer.pdf";
+"~^/doc/statistics/1814-laplace-philosophicalessayonprobabilities-ch5probabilitiestestimonies\.pdf.*$" "/doc/statistics/bayes/1814-laplace-philosophicalessayonprobabilities-ch5probabilitiestestimonies.pdf";
+"~^/indexURL$" "/index";
+"~^/lorem/md$" "/lorem.md";
+"~^/Music-dis$" "/music-distraction";
+"~^/static/font/dropcap/Yinit-H.ttf$" "/static/font/dropcap/yinit/Yinit-H.ttf";
+"~^/.*.php\?req=topicid259&open=0&column=topic$" "/static/404";
+"~^/doc/psychology/collections/.*$" "/doc/psychology/index";
+"~^/doc/psychology/en/$" "/doc/psychology/index";
+"~^/doc/psychology/host/$" "/doc/psychology/index";
+"~^/doc/psychology/form/$" "/doc/psychology/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25088,6 +25133,25 @@
 "~^/website.html.*$" "/404";
 "~^/what.html.*$" "/404";
 "~^/xoomer.alice.*$" "/404";
+"~^/\$/.*$" "/404";
+"~^/android\?.*$" "/404";
+"~^/checkout\?.*$" "/404";
+"~^/coupons\?.*$" "/404";
+"~^/deals\?.*$" "/404";
+"~^/dashboardoverview\?.*$" "/404";
+"~^/base\?.*$" "/404";
+"~^/wrapper\?.*$" "/404";
+"~^/.*%27%22%3Cbmt%3E%20bmt%3D.*$" "/404";
+"~^/.*must_not_exist_404.*$" "/404";
+"~^/\.html.*$" "/404";
+"~^/doc/test.*$" "/404";
+"~^/web1.7z.*$" "/404";
+"~^/[Ss]ite.tar.*$" "/404";
+"~^/[Ss]ite.tar.gz.*$" "/404";
+"~^/[Ss]ite.rar.*$" "/404";
+"~^/[Ss]ite.7z.*$" "/404";
+"~^/quo.html.*$" "/404";
+"~^/sbobetmon.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
