--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -12232,7 +12232,7 @@
 "~^/doc/ai/nn/gan/gwern-2018-11-21-ganqp-asukafaces-10400.jpg$" "/doc/ai/nn/gan/2018-11-21-gwern-ganqp-asukafaces-10400.jpg";
 "~^/doc/ai/nn/gan/2018-12-15-msggan-asukafaces-gen92_60.jpg$" "/doc/ai/nn/gan/2018-12-15-gwern-msggan-asukafaces-gen92_60.jpg";
 "~^/doc/ai/gwern-2021-meme-virginvschad-journalpapervsblogpost.png$" "/doc/ai/2021-gwern-meme-virginvschad-journalpapervsblogpost.png";
-"~^/DNB-meta-analysis\?utm.*$" "/dnm-meta-analysis";
+"~^/DNB-meta-analysis\?utm.*$" "/dnb-meta-analysis";
 "~^/Death-Note-script\?utm.*$" "/death-note-script";
 "~^/darknet-markets/agora/index$" "/doc/darknet-markets/agora/index";
 "~^/DALLE-demos%E3.*$" "/DALL-E";
@@ -13243,7 +13243,7 @@
 "~^/doc/.*/Wikipedia-and-YouTube.*$" "/wikipedia-and-youtube";
 "~^/doc/newest/rss.*$" "/doc/newest/index";
 "~^/Culture-is-not-about-Esthetics\?.*$" "/culture-is-not-about-esthetics";
-"~^/dnm-meta-analysis\?.*$" "/dnm-meta-analysis";
+"~^/dnm-meta-analysis\?.*$" "/dnb-meta-analysis";
 "~^/DNB-FAQ\?.*$" "/dnb-faq";
 "~^/Terrorism-is-not-about-Terror\?.*$" "/terrorism-is-not-about-terror";
 "~^/review/Movies\?.*$" "/review/movies";
@@ -13760,7 +13760,7 @@
 "~^/features$" "/design#features";
 "~^/Design/$" "/design";
 "~^/DNM-archieve$" "/dnm-archive";
-"~^/dnb-meta-analysis/$" "/dnm-meta-analysis";
+"~^/dnb-meta-analysis/$" "/dnb-meta-analysis";
 "~^/doc/2012-russell\.pdf.*$" "/doc/culture/2012-russell.pdf";
 "~^/Black-mark$" "/dnm-arrest";
 "~^/doc/dnb/2011-jaeggi-2-poster\.pdf.*$" "/doc/dual-n-back/2011-jaeggi-poster.pdf";
@@ -18923,6 +18923,73 @@
 "~^/doc/psychology/en/$" "/doc/psychology/index";
 "~^/doc/psychology/host/$" "/doc/psychology/index";
 "~^/doc/psychology/form/$" "/doc/psychology/index";
+"~^/truesight$" "/doc/statistics/stylometry/truesight/index";
+"~^/static/js/darkmode.js.js\?v=1628719372$" "/static/js/darkmode.js";
+"~^/doc/\$/%7B95279527%7D/writing$" "/index";
+"~^/static/js/script.js%3Fv=1731466932$" "/static/js/script.js";
+"~^/static/js/head.js%3Fv=1731466932$" "/static/js/head.js";
+"~^/static/imgs/svg/svg-sprite.svg$" "/static/build/build_icon_sprite_file.php";
+"~^/MLP-genetics/index$" "/mlp-genetics";
+"~^/indexAction.*$" "/index";
+"~^/journals/jgen/jg/article/10.3109/1079-9123.161020$" "/static/404";
+"~^/gwern/index.*$" "/index";
+"~^/doc/technology/1950-g$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-ga$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabri$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabrielli$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabriell$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabriel$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabrie$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gabr$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/technology/1950-gab$" "/doc/technology/1950-gabrielli.pdf";
+"~^/doc/sociology/1979-sechrest$" "/doc/sociology/1979-sechrest.pdf";
+"~^/doc/psychology/personality/conscientiousness/\.wrapper.*$" "/doc/psychology/personality/conscientiousnessindex";
+"~^/doc/psychology/personality/1996murphyi.*$" "/doc/psychology/personality/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf";
+"~^/doc/psychology/98.*$" "/doc/psychology/index";
+"~^/doc/psychology/\$/98.*$" "/doc/psychology/index";
+"~^/doc/math/1980-euler-rational-mechanicsflexibleelasticbodies16381788\.pdf.*$" "/doc/math/1980-euler-rationalmechanicsflexibleelasticbodies16381788.pdf";
+"~^/doc/iq/high/munich/iq/smpy/munich/2010-heller\.pdf.*$" "/doc/iq/high/munich/2010-heller.pdf";
+"~^/.*/data:image/svg-xml$" "/static/404";
+"~^/doc/cs/haskell/Jy.*$" "/doc/cs/haskell/index";
+"~^/.*/Extracts\.$" "/static/404";
+"~^/doc/bitcoin/2005-szabo-bitgold\.pdf.*$" "http://unenumerated.blogspot.com/2005/12/bit-gold.html";
+"~^/doc/\$/98.*$" "/doc/index";
+"~^/custom/MathJax/MathJax\..*Safe$" "https://cdnjs.cloudflare.com/ajax/libs/mathjax/latest/MathJax.js?config=default";
+"~^/Console-Insurance.html$" "/console-insurance";
+"~^/dnm-meta-analysis$" "/dnb-meta-analysis";
+"~^/doc/\$/$" "/doc/index";
+"~^/doc/japan/2001-12-samuels-kishiandcorruptionananatomyofthe1955system.doc$" "/doc/japan/history/2001-12-samuels-kishiandcorruptionananatomyofthe1955system.html";
+"~^/doc/2016-barzilai\.pdf.*$" "/doc/longevity/metformin/2016-barzilai.pdf";
+"~^/doc/2002-rush\.pdf.*$" "/doc/modafinil/2002-rush.pdf";
+"~^/doc/2013-hahn\.pdf.*$" "/doc/nicotine/2013-hahn.pdf";
+"~^/doc/psychology/2020-10-26-0$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/psychology/index.php/$" "/doc/psychology/index";
+"~^/doc/psychology/writing/index.php/$" "/doc/psychology/writing/index";
+"~^/doc/rotten.com/library/occult/magic/spells/index$" "/doc/rotten.com/library/occult/magic/spells/index.html";
+"~^/doc/sociology/ben-kurier.*/2023-robertson\.pdf.*$" "/doc/sociology/technology/2023-robertson.pdf";
+"~^/doc/statistics/1998-britton\.pdf.*$" "/doc/statistics/causality/1998-britton.pdf";
+"~^/doc/statistics/2000-maclehose\.pdf.*$" "/doc/statistics/causality/2000-maclehose.pdf";
+"~^/doc/technolo$" "/doc/technology/";
+"~^/doc/touhou/123.*$" "/doc/touhou/index";
+"~^/Prompt-Engineering.*$" "/gpt-3#prompt-engineering";
+"~^/modafinik.*$" "/modafinil";
+"~^/narrowing-circle./$" "/narrowing-circle";
+"~^/newsletter/2020/08/$" "/newsletter/2020/08";
+"~^/Simulation-inferences.html/$" "/simulation-inferences";
+"~^/static/font/dropcap/Yinit-Q.ttf$" "/static/font/dropcap/yinit/Yinit-Q.ttf";
+"~^/.../1998-lewy.pdf.*$" "/doc/melatonin/1998-lewy.pdf";
+"~^/desin$" "/design";
+"~^/doc/darknet-market/2012-06-1$" "/doc/darknet-market/index";
+"~^/FACES$" "/faces";
+"~^/Feed.hs$" "https://hackage.haskell.org/package/gitit-0.8/docs/src/Network-Gitit-Feed.html";
+"~^/research-ideas$" "/idea";
+"~^/research-idea$" "/idea";
+"~^/midjourney$" "/doc/ai/nn/diffusion/midjourney/index";
+"~^/ideas-research$" "/idea";
+"~^/idea-research$" "/idea";
+"~^/fiction/suzanne-delage$" "/suzanne-delage";
+"~^/doc/longform/1968-hardin\.pdf.*$" "https://en.wikipedia.org/wiki/Tragedy_of_the_commons#Garrett_Hardin's_article";
+"~^/invert$" "/invertornot";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25152,6 +25219,26 @@
 "~^/[Ss]ite.7z.*$" "/404";
 "~^/quo.html.*$" "/404";
 "~^/sbobetmon.*$" "/404";
+"~^/webui.*$" "/404";
+"~^/ai_disclosures\.json.*$" "/404";
+"~^/start\.jsa.*$" "/404";
+"~^/fog/.*$" "/404";
+"~^/dana-cached.*$" "/404";
+"~^/base.jhtml.*$" "/404";
+"~^/1CSCOE.*$" "/404";
+"~^/visual138.*$" "/404";
+"~^/start.html.*$" "/404";
+"~^/Sequel_.*$" "/404";
+"~^/Rs6.*$" "/404";
+"~^/refreshToken.*$" "/404";
+"~^/QErcbXuV.*$" "/404";
+"~^/publish\.css.*$" "/404";
+"~^/_phpinfo.*$" "/404";
+"~^/menu.jsa.*$" "/404";
+"~^/lara/phpinfo.php.*$" "/404";
+"~^/devnew.*$" "/404";
+"~^/bSbE.*$" "/404";
+"~^/base.html.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
