--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18990,6 +18990,10 @@
 "~^/fiction/suzanne-delage$" "/suzanne-delage";
 "~^/doc/longform/1968-hardin\.pdf.*$" "https://en.wikipedia.org/wiki/Tragedy_of_the_commons#Garrett_Hardin's_article";
 "~^/invert$" "/invertornot";
+"~^/doc/www/arxiv.org/89f378d0e61fc00754c5e6d175e644578593d372.pdf%23page=85.*$" "/doc/www/arxiv.org/89f378d0e61fc00754c5e6d175e644578593d372.pdf#page=85";
+"~^/doc/philosophy/%EF%BF%BD.*$" "/doc/philosophy/";
+"~^/Danboou2018$" "/Danbooru2021#danbooru2018";
+"~^/haskell/Archiving$" "/haskell/archiving-github";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
