--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18994,6 +18994,40 @@
 "~^/doc/philosophy/%EF%BF%BD.*$" "/doc/philosophy/";
 "~^/Danboou2018$" "/Danbooru2021#danbooru2018";
 "~^/haskell/Archiving$" "/haskell/archiving-github";
+"~^/doc/rotten.com/library/history/port-chicago/index.html-.*$" "/doc/rotten.com/library/history/port-chicago/index.html";
+"~^/doc/psychology/personality/1991-sternberg.pdff.*$" "/doc/psychology/personality/1991-sternberg.pdf";
+"~^/doc/personal/2011-gwern-yourmorals.org/current_events_process.html-.*$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.html";
+"~^/doc/[b-z].+/eva/2005-sawaragi$" "/doc/anime/eva/2005-sawaragi";
+"~^/static/js/footnotes.js\?utm.*$" "/static/js/footnotes.js";
+"~^/static/js/darkmode.js.js\?v.*$" "/static/js/darkmode.js";
+"~^/.*/LSD-20microdosing$" "/lsd-microdosing";
+"~^/menu.*$" "/index";
+"~^/doc/statistics/eva/2002-takeda-notenkimemoirs$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/sociology/2003-murray-humanaccomplishment.pdfgwern.*$" "/doc/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/doc/rotten.com/library/bio/business/jeffrey-skilling/index.html-.*$" "/doc/rotten.com/library/bio/business/jeffrey-skilling/index.html";
+"~^/doc/reinforcement-learning/armstrong-controlproblem/index.html-.*$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
+"~^/doc/psychology/personality/1991-sternberg.pdffb.*$" "/doc/psychology/personality/1991-sternberg.pdf";
+"~^/doc/psychology/okcupid/--sf.*$" "/doc/psychology/okcupid/index";
+"~^/doc/psychology/okcupid/0,.*$" "/doc/psychology/okcupid/index";
+"~^/doc/psychology/music/distraction/index-0.*$" "/doc/psychology/music/distraction/index";
+"~^/doc/cat/genetics\.pdf.*$" "/doc/cat/geneticsindex";
+"~^/doc/cat/catnip/%C3%B0.*$" "/doc/cat/catnip/index";
+"~^/co2-coin/.*$" "/co2-coin";
+"~^/3-grenades/.*$" "/3-grenades";
+"~^/Beauty-0$" "/beauty";
+"~^/Bitcoin-is-Wo$" "/bitcoin-is-worse-is-better";
+"~^/doc/ai/poetry/index-0$" "/doc/ai/poetry/index";
+"~^/doc/culturef$" "/doc/culture/index";
+"~^/doc/economics/1961-mcclelland-theachievingsociety\.pdf.*$" "/doc/economics/1971-mcclelland-theachievingsociety.pdf";
+"~^/doc/psychology/2019-01-%EF%BF%BD.*$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/sociology/%E5%9B%BE%E7%89%87-10.*$" "/doc/sociology/index";
+"~^/haskell/Archiving-GitHub-0$" "/haskell/archiving-github";
+"~^/zeo/%C3%82%C2%BF.*$" "/zeo/index";
+"~^/problem-14/rss$" "/problem-14";
+"~^/review/arpa-0$" "/review/arpa";
+"~^/review/Umineko/$" "/review/umineko";
+"~^/static/js/at.js$" "/static/js/index";
+"~^/wikipedia-resum$" "/wikipedia-resume";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25243,6 +25277,21 @@
 "~^/devnew.*$" "/404";
 "~^/bSbE.*$" "/404";
 "~^/base.html.*$" "/404";
+"~^/2hd.*$" "/404";
+"~^/class-IXR.*$" "/404";
+"~^/cswls_.*$" "/404";
+"~^/cswl_.*$" "/404";
+"~^/current/.*$" "/404";
+"~^/development/.*$" "/404";
+"~^/develop/.*$" "/404";
+"~^/dsrdelete.*$" "/404";
+"~^/kyc/.*$" "/404";
+"~^/drawer.css.*$" "/404";
+"~^/marketing/.*$" "/404";
+"~^/poi/.*$" "/404";
+"~^/stg/.*$" "/404";
+"~^/website/.*$" "/404";
+"~^/yanz.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
