--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16848,7 +16848,7 @@
 "~^/doc/culture/2010-dobelli.pdfj$" "/doc/culture/2010-dobelli.pdf";
 "~^/doc/1999-vanstuijvenberg\.pdf.*$" "/doc/iodine/1999-vanstuijvenberg.pdf";
 "~^/doc/personal/2011-1$" "/doc/personal/index";
-"~^/benter.*$" "//doc/statistics/decision/1994-benter.pdf";
+"~^/benter.*$" "/doc/statistics/decision/1994-benter.pdf";
 "~^/writings$" "/index";
 "~^//about.*$" "/about";
 # "~^/doc/statistics/decision/2022-boettiger.pdf%5C.*$" "/doc/statistics/decision/2022-boettiger.pdf";
@@ -16870,7 +16870,7 @@
 "~^/doc/cat/psychology/2013-nicastro\.pdf.*$" "/doc/cat/psychology/index";
 "~^/doc/cat/psychology/2010-bradshaw\.pdf.*$" "/doc/cat/psychology/index";
 "~^/11.*-index.html$" "/index";
-"~^/Benter$" "//doc/statistics/decision/1994-benter.pdf";
+"~^/Benter$" "/doc/statistics/decision/1994-benter.pdf";
 "~^/gpt-1$" "https://openai.com/research/language-unsupervised";
 "~^/doc/darknet-market/2019-04-22deepdotweb-dnmlist.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
 "~^/doc/politic$" "/doc/politics/index";
@@ -19028,6 +19028,39 @@
 "~^/review/Umineko/$" "/review/umineko";
 "~^/static/js/at.js$" "/static/js/index";
 "~^/wikipedia-resum$" "/wikipedia-resume";
+"~^/doc/psychology/spaced-repetition/2006-parker.pdfH.*$" "/doc/psychology/spaced-repetition/2006-parker.pdf";
+"~^/tool-aiSimulators.*$" "/tool-ai";
+"~^/doc/sociology/1980-patton-qualitativeevaluationmethods$" "/doc/sociology/1980-patton-qualitativeevaluationmethods.pdf";
+"~^/doc/science/www.*/aslaksen/\.pdf.*$" "/doc/science/2010-aslaksen.pdf";
+"~^/doc/rotten.*/2007-wolfe$" "/doc/culture/2007-wolfe";
+"~^/doc/psychology/spaced-repetition/2006-parker.\.pdf.*$" "/doc/psychology/spaced-repetition/2006-parker.pdf";
+"~^/doc/psychiatry/lithium/1Schrauzer,-G.N.,-Shrestha,-K.P.,-1990.*$" "/doc/psychiatry/lithium/1990-schrauzer.pdf";
+"~^/doc/personal/selfeval_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/selfeval_process.html";
+"~^/doc/iq/high/smpy/19...Model.*$" "/doc/iq/high/smpy/index";
+"~^/doc/index/design/index$" "/doc/design/index";
+"~^/doc/[g-z].*/eva/2002-takeda-notenkimemoirs$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/bitcoin/1956-littletonstudiesinthehistoryofaccounting\.pdf.*$" "/doc/bitcoin/1956-littleton-studiesinthehistoryofaccounting.pdf";
+"~^/doc/ai/scaling/2021-10$" "/doc/ai/scaling/2021-10-11-xinzhiyuan-inspursource10gpt245b.html";
+"~^/twiter$" "twitter";
+"~^/404.hml$" "/404.html";
+"~^/webroot$" "/index";
+"~^/asdf.*$" "/index";
+"~^/git$" "https://github.com/gwern/gwern.net/";
+"~^/doc/anime/eva/1996-newtype-anno-interviewthe$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/anime/eva/2008-gardner$" "/doc/anime/eva/2008-gardner-2.pdf";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs";
+"~^/doc/design/2014-01-23-quiddity-wppopups-lupinstooltour-catarticleexamplepopup-recursive.jpg$" "/doc/design/2014-01-23-quiddity-wppopups-lupinstooltour-catarticleexamplepopup-recursive.png";
+"~^/doc/fiction/gene-wolfe/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg$" "/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg";
+"~^/doc/49.*$" "/doc/index";
+"~^/doc/2004-dar\.pdf.*$" "/doc/nicotine/2004-dar.pdf";
+"~^/doc/psychology/coll$" "/doc/psychology/collecting/index";
+"~^/doc/statistics/declsion/1994-benter\.pdf.*$" "/doc/statistics/decision/1994-benter.pdf";
+"~^/doc/survey/%C2%BF$" "/doc/survey/index";
+"~^/Lins$" "/links";
+"~^/twitte$" "/twitter";
+"~^/LSD-microdos$" "/lsd-microdosing";
+"~^/static/build/guesstag.hs$" "/static/build/guessTag.hs";
+"~^/default$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25292,6 +25325,43 @@
 "~^/stg/.*$" "/404";
 "~^/website/.*$" "/404";
 "~^/yanz.*$" "/404";
+"~^/\$TARGET_DIR.*$" "/404";
+"~^/xploiter.*$" "/404";
+"~^/v4team.*$" "/404";
+"~^/shell.txt.*$" "/404";
+"~^/sheller.*$" "/404";
+"~^/sg.phtm.*$" "/404";
+"~^/sa.phtm.*$" "/404";
+"~^/r00t.*$" "/404";
+"~^/_-.php.*$" "/404";
+"~^/.php5.*$" "/404";
+"~^/\$2011.*$" "/404";
+"~^/malay.phtml.*$" "/404";
+"~^/L3b.phtml.*$" "/404";
+"~^/kelulusan/.*$" "/404";
+"~^/kcfinder/.*$" "/404";
+"~^/k2ll.phtml.*$" "/404";
+"~^/gaza.phtml.*$" "/404";
+"~^/doc/www/.*/backlink-gratis/.*$" "/404";
+"~^/.*Sym\.php.*$" "/404";
+"~^/.*r57\.php.*$" "/404";
+"~^/.*r00t-s3c\.php.*$" "/404";
+"~^/doc/amad.php.*$" "/404";
+"~^/doc/2.php.*$" "/404";
+"~^/darkshell.phtml.*$" "/404";
+"~^/cMVHS-Eqko.*$" "/404";
+"~^/berandal.*$" "/404";
+"~^/asset/wp-plugins.*$" "/404";
+"~^/shark_bite.*$" "/404";
+"~^/penis.*$" "/404";
+"~^/nurse-virtual.*$" "/404";
+"~^/nacos.*$" "/404";
+"~^/jomwins/.*$" "/404";
+"~^/function/.*$" "/404";
+"~^/_all_dbs.*$" "/404";
+"~^/actuator.*$" "/404";
+"~^/958.*$" "/404";
+"~^/931.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
