--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1003,7 +1003,7 @@ server {
         rewrite ^/doc/music/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
         rewrite ^/(?<before>.*)/1\*(?<after>.*)$ /$before/$after permanent;
         rewrite ^/(?<before>.*)\*(?<after>.*)$   /$before$after  permanent;
-        rewrite ^/doc/www/members.madasafish.com/artwork/(?<after>.*)$ http://members.madasafish.com/artwork/$after permanent;
+        rewrite ^/doc/www/.*\.madasafish.com/artwork/(?<after>.*)$ http://members.madasafish.com/artwork/$after permanent;
         rewrite ^/doc/www/members.madasafish.com/Location_Location/(?<after>.*)$ http://members.madasafish.com/Location_Location/$after permanent;
         rewrite ^/doc/www/members.madasafish.com/map_of-Hogwarts/(?<after>.*)$ http://members.madasafish.com/map_of-Hogwarts/$after permanent;
 
