--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19061,6 +19061,26 @@
 "~^/LSD-microdos$" "/lsd-microdosing";
 "~^/static/build/guesstag.hs$" "/static/build/guessTag.hs";
 "~^/default$" "/index";
+"~^/doc/facesofdeath.com/library/$" "/doc/rotten.com/library/index.html";
+"~^/doc/facesofdeath.com/library$" "/doc/rotten.com/library/index.html";
+"~^/doc/traffic/2010-%C3%B0$" "/doc/traffic/index";
+"~^/doc/rotten.com/library/circumcision/$" "/doc/rotten.com/library/sex/circumcision/index.html";
+"~^/doc/fiction/fiction/genshiken$" "/fiction/genshiken";
+"~^/doc/ai/nn/2019-lecun-isscctalk-cake.png/.*$" "/doc/ai/nn/2019-lecun-isscctalk-cake.png";
+"~^/DNM%252520archives$" "/dnm-archive";
+"~^/D%EF%BF%BD%EF%BF%BD%EF%B.*survival$" "/dnm-survival";
+"~^/Bitcoin%7B8.*$" "/Bitcoin-is-worse-is-better";
+"~^/hegel$" "https://en.wikipedia.org/wiki/Hegel";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-3.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-17-gwern-midjourneyv5-cats-g-light-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-19-gwern-midjournevy5-cats-q-light-3.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-19-gwern-midjournevy5-cats-q-light-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-c-light-8.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-c-light-8.jpg";
+"~^/doc/cs/linkrot/cs/linkrot/2009-08-20-b3ta-fujitsuhtml.mht$" "/doc/cs/linkrot/2009-08-20-b3ta-fujitsuhtml.mht";
+"~^/doc/economics/advertising/2019-06-10-1$" "/doc/economics/advertising/2019-06-10-googlesurveys-addislike.csv";
+"~^/doc/psychology/-1977-smith\.pdf.*$" "/doc/genetics/heritable/correlation/1980-smith.pdf";
+"~^/doc/psychology/-okcupid/howyourraceaffectsthemessagesyouget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/sociology/technology/sociology/technology/2017-reddit-dhieno-theplace-timelapseevolution.mp4$" "/doc/sociology/technology/2017-reddit-dhieno-theplace-timelapseevolution.mp4";
+"~^/sicp/Chapter-1-3.md$" "/sicp/chapter-1-3.md";
+"~^/static/popups.js$" "/static/js/popups.js";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25362,6 +25382,19 @@
 "~^/actuator.*$" "/404";
 "~^/958.*$" "/404";
 "~^/931.*$" "/404";
+"~^//?app/.*$" "/404";
+"~^//?conf/.*$" "/404";
+"~^//?config/.*$" "/404";
+"~^//?database/.*$" "/404";
+"~^/.db/.*$" "/404";
+"~^//?db_backups/.*$" "/404";
+"~^//?btc/.*$" "/404";
+"~^///sql/.*$" "/404";
+"~^///var/.*$" "/404";
+"~^//?var/.*$" "/404";
+"~^//?wallet/.*$" "/404";
+"~^//?pub/.*$" "/404";
+"~^//?includes/.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
