--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19081,6 +19081,18 @@
 "~^/doc/sociology/technology/sociology/technology/2017-reddit-dhieno-theplace-timelapseevolution.mp4$" "/doc/sociology/technology/2017-reddit-dhieno-theplace-timelapseevolution.mp4";
 "~^/sicp/Chapter-1-3.md$" "/sicp/chapter-1-3.md";
 "~^/static/popups.js$" "/static/js/popups.js";
+"~^/[Hh]arberger-.*$" "/harberger";
+"~^/[Hh]arberge?$" "/harberger";
+"~^/self-?funding.*$" "/harberger";
+"~^/Xmonad/Config_archive/Gwern$" "https://wiki.haskell.org/Xmonad/Config_archive/Gwern's_xmonad.hs";
+"~^/lesswrong-survey$" "/doc/lesswrong-survey/index";
+"~^/doc/psychology/2019-kross\.pdf.*$" "/doc/psychology/index";
+"~^/doc/economics/advertising/Participants.*$" "/doc/economics/advertising/index";
+"~^/soul_user_font.ttf$" "/404";
+"~^/posts/anifont/images/badapple.png$" "/404";
+"~^/doc/gwern$" "/doc/index";
+"~^/doc/gan/thiswaifudoesnotexist-v3-100samples.jpg$" "/doc/ai/nn/gan/stylegan/anime/gwern-thiswaifudoesnotexist-100samples.jpg";
+"~^/doc/psychology/okcupid/weexperimentonhumanbein$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25395,6 +25407,8 @@
 "~^//?wallet/.*$" "/404";
 "~^//?pub/.*$" "/404";
 "~^//?includes/.*$" "/404";
+"~^/Files/.*$" "/404";
+"~^/muk-.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
