--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11743,3 +11743,6 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/2024-11-10-gwern-midjourneyv6-redvsblue-abstractbirdshapedswirl.png.*$" "/doc/ai/nn/diffusion/midjourney/2024-11-10-gwern-midjourneyv6-redvsblue-abstractbirdshapedswirl.jpg";
 "~^/doc/cs/css/2024-11-10-gwern-gwernnet-linkicons-colored-lightmode-ycocgcolortransformprototype.png.*$" "/doc/cs/css/2024-11-10-gwern-gwernnet-linkicons-colored-lightmode-ycocgcolortransformprototype.jpg";
 "~^/doc/longevity/glp/tirzepatide/2024-11-18-2024-packer-figure1-survivalanalysisoftirzepatideforheartfailurehalvesmortality-2.jpg.*$" "/doc/longevity/glp/tirzepatide/2024-11-18-2024-packer-figure1-survivalanalysisoftirzepatideforheartfailurehalvesmortality.jpg";
+"~^/doc/math/1974-mathai-figure2-reconstructedsunflowerhead.png.*$" "/doc/math/1974-mathai-figure2-reconstructedsunflowerhead.jpg";
+"~^/doc/reinforcement-learning/model/alphago/2017-silver-figure6-performanceofalphagozerolearningcurvesandbyelocomparison.png.*$" "/doc/reinforcement-learning/model/alphago/2017-silver-figure6-performanceofalphagozerolearningcurvesandbyelocomparison.jpg";
+"~^/doc/psychology/personality/2024-bates-figure1-scatterplotofcrybulliesvsnarcissismmachiavellianism.jpg.*$" "/doc/psychology/personality/narcissism/2024-bates-figure1-scatterplotofcrybulliesvsnarcissismmachiavellianism.jpg";
