nginx: attempt to block direct IP access to reduce bot spam

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -25,6 +25,11 @@ server {
 
      server_name gwern.net;
 
+     # block anyone trying to access by direct IP; this can be useful for debugging, but seems to be badly abused by bots/scanners, clogging the logs with spurious errors. So we kick them out at the start. (All legitimate users should have been redirected to the 'gwern.net' domain by this point.)
+     if ( $host != "gwern.net" ){
+        return 444; # 444="CONNECTION CLOSED WITHOUT RESPONSE"
+    }
+
      ssl_certificate      /home/gwern/ssl/cloudflare.cert;
      ssl_certificate_key  /home/gwern/ssl/cloudflare.key;
 
@@ -1049,3 +1054,4 @@ server {
     }
 
 }
+
