--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18878,7 +18878,6 @@
 "~^/[Cc]olor.*$" "/web-color";
 "~^/[Ww]ebsite-?[Cc]olor.*$" "/web-color";
 "~^/[Ll]ink-?[Cc]olor.*$" "/web-color";
-
 "~^/web-colors$" "/web-color";
 "~^/doc/bitcoin/1956-littleton-studiesinthehistoryofaccounting.pdf\&lt.*$" "/doc/bitcoin/1956-littleton-studiesinthehistoryofaccounting.pdf";
 "~^/doc/biology/2000-iapac-norvir/tolerability/index$" "https://web.archive.org/web/20020209100404/http://www.iapac.org:80/tolerability/index.html";
@@ -19093,6 +19092,23 @@
 "~^/doc/gwern$" "/doc/index";
 "~^/doc/gan/thiswaifudoesnotexist-v3-100samples.jpg$" "/doc/ai/nn/gan/stylegan/anime/gwern-thiswaifudoesnotexist-100samples.jpg";
 "~^/doc/psychology/okcupid/weexperimentonhumanbein$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/rotten.com/library/hymen/$" "/doc/rotten.com/library/sex/hymen/index.html";
+"~^/doc/philosophy/%C3.*$" "/doc/philosophy/index";
+"~^/doc/personal/Dg.*$" "/doc/personal/index";
+"~^/doc/iodine/1972-fierro-ben.*$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/ai/poetry/V9.*$" "/doc/ai/poetry/index";
+"~^/doc/sr/2019-04-22-deepdotweb$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/genetics/2016-maes\.pdf.*$" "/doc/genetics/heritable/2016-maes.pdf";
+"~^/doc/statistics/1954-hodges\.pdf.*$" "/doc/statistics/decision/1954-hodges.pdf";
+"~^/doc/technology/2017-%EF%BF%BD$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/cs/security/www/arxiv.org/fc6752ff4540f368c0f6fbf8364ca37485b321e1\.pdf.*$" "/doc/www/arxiv.org/fc6752ff4540f368c0f6fbf8364ca37485b321e1.pdf";
+"~^/NootropicsSmart.*$" "/nootropic";
+"~^/palms$" "/crops#palm";
+"~^/turing-comple$" "/turing-complete";
+"~^/doc/japan/2001-debary-sourceso:apanese$" "https://libgen.li/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/GPT-x$" "/gpt-3";
+"~^/.*ð$" "/404";
+"~^/Complexity.*$" "/complexity";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25409,6 +25425,15 @@
 "~^//?includes/.*$" "/404";
 "~^/Files/.*$" "/404";
 "~^/muk-.*$" "/404";
+"~^/__moduleName.*$" "/404";
+"~^/110$" "/index";
+"~^/See$" "/404";
+"~^/Scary$" "/404";
+"~^/2.5-MB$" "/404";
+"~^/2022$" "/index";
+"~^/.../1996$" "/index";
+"~^/18" "/index";
+"~^/0b.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
